ended pause + thinking about bonusses

--- a/index.html
+++ b/index.html
@@ -415,30 +415,30 @@
         <!--parte inferiore main-->
            <div class="bg-lightblue">
                 <div class="flex-blue-section container-center-bottom-main">
-                    <h2>test test test test test test test</h2>
-                    <button>test</button>
+                    <h2>Porta Dropbox Business nella tua azienda</h2>
+                    <button class="btn btn-secondary">Inizia la tua prova gratuita</button>
                 </div>
            </div>  
 
            <!--faq-->
            <div class="container-center-bottom-main">
-            <h2>test test</h2>
+            <h2>Domande frequenti</h2>
                 <div class="faqs">
                     <div class="faq-row">
                          <hr>
                          <div class="celle-faq">
-                             <h3>test test test test</h3>
-                             <span>freccia</span>
+                             <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+                             <span><i class="fa-solid fa-angle-down"></i></span>
                          </div>
                          <hr>
                          <div class="celle-faq">
-                             <h3>test test test test</h3>
-                             <span>freccia</span>
+                             <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+                             <span><i class="fa-solid fa-angle-down"></i></i></span>
                          </div>
                          <hr>
                          <div class="celle-faq">
-                             <h3>test test test test</h3>
-                             <span>freccia</span>
+                             <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+                             <span><i class="fa-solid fa-angle-down"></i></i></span>
                          </div>
                          <hr>
                     </div>
@@ -460,19 +460,19 @@
                 <li>
                      <ul class="horizontal-ul">
                         <li>
-                            <h2>test</h2>
+                            <h2>Dropbox</h2>
                         </li>
                         <li>
-                            <h2>test</h2>
+                            <h2>Prodotti</h2>
                         </li>
                         <li>
-                            <h2>test</h2>
+                            <h2>Azienda</h2>
                         </li>
                         <li>
-                            <h2>test</h2>
+                            <h2>Supporto</h2>
                         </li>
                         <li>
-                            <h2>test</h2>
+                            <h2>Community</h2>
                         </li>
                     </ul>
 
@@ -484,95 +484,95 @@
                         <li>
                             <ul class="vertical-ul-inner">
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Applicazione desktop</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Perchè Dropbox</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Piani</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Sicurezza</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <ul class="vertical-ul-inner">
-                                <li>
-                                    <a href="">test</a>
-                                </li>
-                                <li>
-                                    <a href="">test</a>
-                                </li>
-                                <li>
-                                    <a href="">test</a>
-                                </li>
-                                <li>
-                                    <a href="">test</a>
-                                </li>
-                                <li>
-                                    <a href="">test</a>
+                                    <a href="">Funzioni</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
                             <ul class="vertical-ul-inner">
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Applicazione desktop</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Perchè Dropbox</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Piani</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Sicurezza</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <ul class="vertical-ul-inner">
-                                <li>
-                                    <a href="">test</a>
-                                </li>
-                                <li>
-                                    <a href="">test</a>
-                                </li>
-                                <li>
-                                    <a href="">test</a>
-                                </li>
-                                <li>
-                                    <a href="">test</a>
-                                </li>
-                                <li>
-                                    <a href="">test</a>
+                                    <a href="">Funzioni</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
                             <ul class="vertical-ul-inner">
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Applicazione desktop</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Perchè Dropbox</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Piani</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Sicurezza</a>
                                 </li>
                                 <li>
-                                    <a href="">test</a>
+                                    <a href="">Funzioni</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="vertical-ul-inner">
+                                <li>
+                                    <a href="">Applicazione desktop</a>
+                                </li>
+                                <li>
+                                    <a href="">Perchè Dropbox</a>
+                                </li>
+                                <li>
+                                    <a href="">Piani</a>
+                                </li>
+                                <li>
+                                    <a href="">Sicurezza</a>
+                                </li>
+                                <li>
+                                    <a href="">Funzioni</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="vertical-ul-inner">
+                                <li>
+                                    <a href="">Applicazione desktop</a>
+                                </li>
+                                <li>
+                                    <a href="">Perchè Dropbox</a>
+                                </li>
+                                <li>
+                                    <a href="">Piani</a>
+                                </li>
+                                <li>
+                                    <a href="">Sicurezza</a>
+                                </li>
+                                <li>
+                                    <a href="">Funzioni</a>
                                 </li>
                             </ul>
                         </li>
@@ -586,7 +586,7 @@
 
                 <!--language-->
                 <li>
-                    test
+                    <i class="fa-solid fa-earth-europe"></i> Italiano <i class="fa-solid fa-angle-up"></i>
                 </li>
             </ul>
 
