added style for links and btns

--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
     <header class="header-bgcolor">
         <nav class="navbar">
             <ul class="nav-list">
-                <li><a href="index.html"><img src="img/logo-small.png" alt="logo"></a></li>
-                <li><a href="">Perchè Dropbox</a></li>
-                <li><a href="">Funzioni</a></li>
-                <li><a href="">Piani e Prezzi</a></li>
+                <li class="nav-flex-li-nohover"><a href="index.html"><img src="img/logo-small.png" alt="logo"></a></li>
+                <li class="nav-flex-li"><a href="">Perchè Dropbox</a></li>
+                <li class="nav-flex-li"><a href="">Funzioni</a></li>
+                <li class="nav-flex-li"><a href="">Piani e Prezzi</a></li>
             </ul>
 
             <ul class="nav-list">
-                <li><a href="">Supporto</a></li>
-                <li><a href="">Contatta l'ufficio vendite</a></li>
-                <li><a href="">Accedi</a></li>
-                <li><a href=""></a><button class="btn btn-primary">Inizia</button></li>
+                <li class="nav-flex-li"><a href="">Supporto</a></li>
+                <li class="nav-flex-li"><a href="">Contatta l'ufficio vendite</a></li>
+                <li class="nav-flex-li"><a href="">Accedi</a></li>
+                <li class="nav-flex-li-nohover"><a href=""></a><button class="btn btn-primary">Inizia</button></li>
             </ul>
         </nav>
 
