added working arrow on header

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <span>Annulla in qualsiasi momento</span>
                     <div>
-                        <a href=""><i class="fa-solid fa-arrow-down"></i></a>
+                        <a href="#designit"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
                     
                 </div>
