added bonus to faqs

--- a/index.html
+++ b/index.html
@@ -426,20 +426,38 @@
                 <div class="faqs">
                     <div class="faq-row">
                          <hr>
-                         <div class="celle-faq">
+                         <div class="faq-container-espandibile">
+                             <div class="celle-faq">
                              <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
-                             <span><i class="fa-solid fa-angle-down"></i></span>
-                         </div>
+                                 <span><i class="fa-solid fa-angle-down"></i></span>
+                             </div>
+                            <!--bonus track-->
+                             <div>
+                                <span> You just win the bonus!</span>
+                             </div>
+                         </div>   
                          <hr>
-                         <div class="celle-faq">
-                             <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
-                             <span><i class="fa-solid fa-angle-down"></i></i></span>
-                         </div>
+                         <div class="faq-container-espandibile">
+                            <div class="celle-faq">
+                            <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+                                <span><i class="fa-solid fa-angle-down"></i></span>
+                            </div>
+                           <!--bonus track-->
+                            <div>
+                               <span> You just win the bonus!</span>
+                            </div>
+                        </div>
                          <hr>
-                         <div class="celle-faq">
-                             <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
-                             <span><i class="fa-solid fa-angle-down"></i></i></span>
-                         </div>
+                         <div class="faq-container-espandibile">
+                            <div class="celle-faq">
+                            <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+                                <span><i class="fa-solid fa-angle-down"></i></span>
+                            </div>
+                           <!--bonus track-->
+                            <div>
+                               <span> You just win the bonus!</span>
+                            </div>
+                        </div>
                          <hr>
                     </div>
                 
