fixed empty div in third column

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <div class="colonna-sezione">
                                 <h2>Enterprise</h2>
                                 <b>Contattaci</b>
-                                <div class="errore-grave"></div>
+                                <span>-</span>
                             </div>
 
                             <!--parte centrale-->
